# freebsd-getopt-portable

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-BSD.md  README.md
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  Welcome.txt  config.h.in
getopt_freebsd/: getopt.c  getopt.h  getopt_long.c  getprogname.c  getprogname.h
getopt_freebsd_tests/: CMakeLists.txt
getopt_freebsd_win/: CMakeLists.txt  getopt.c  getopt.h  getopt_long.c  getprogname.c  getprogname.h
getopt_freebsd_win_tests/: CMakeLists.txt  test.c  test_getopt.h  test_getopt_long.h
